# shell

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  check.sh  conftest.py  main.cpp  test_basic.py  test_vfs.py  utils.py
.github/workflows/: main.yml
debian/: changelog  control  rules
src/: main  main.cpp
